<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/EventDarkBlue"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/size20dp"
    tools:context=".activity.MainActivity">

    <TextView
        android:id="@+id/titleLbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_margin="@dimen/size10dp"
        android:text="@string/titleTxt"
        android:textColor="@color/white"
        android:textSize="@dimen/size30sp" />

    <EditText
        android:id="@+id/userNameTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size10dp"
        android:ems="10"
        android:hint="@string/userNameF"
        android:inputType="textPersonName"
        android:padding="@dimen/size10dp"
        android:textColorHint="@color/offWhite"
        android:autofillHints="" />

    <EditText
        android:id="@+id/passwordTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size10dp"
        android:ems="10"
        android:hint="@string/passwordtxt"
        android:inputType="textPassword"
        android:padding="@dimen/size10dp"
        android:textColorHint="@color/offWhite" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size10dp"
        android:background="@color/btnBackground"
        android:text="@string/loginTxt"
        android:textColor="@color/EventDarkBlue"
        android:textSize="@dimen/size15sp" />

</LinearLayout>